# my_shop

./: .env.dev  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  convert-req-to-poetry.py  docker-compose.yml  entrypoint.sh  manage.py  pyproject.toml  pytest.ini  requirements.txt
my_shop/: .gitignore  Dockerfile  README.md  asgi.py  convert-req-to-poetry.py  docker-compose.yml  entrypoint.sh  pyproject.toml  requirements.txt  settings.py  urls.py  wsgi.py
my_shop/my_shop/: settings.py  urls.py
my_shop/shop_app/: admin.py  forms.py  models.py  urls.py  utils.py  views.py
my_shop/shop_app/migrations/: 0001_initial.py  0002_cart_quantity_products.py  0003_remove_cart_products_in_the_basket_and_more.py  0004_coupon_product_coupon_history_product_coupon.py  0005_remove_product_coupon_remove_product_coupon_history_and_more.py  0014_alter_checkout_number.py  0018_rename_tredemark_product_trademark.py  0020_alter_descriptionproductcart_cart_and_more.py  0022_checkout_product_quality.py  0025_alter_comments_profile.py  0026_alter_comments_product.py  0028_alter_cart_products_in_the_cart_and_more.py  0029_alter_descriptionproductcart_quality.py
my_shop/shop_app/templatetags/: poll_extras.py
my_shop/static/shop_app/assets/css/: style.css
my_shop/static/shop_app/shop_app/assets/scss/: main.scss
my_shop/templates/shop_app/: base.html  cart.html  my-account.html  product-details.html  register.html  shop.html  wishlist.html
nginx/: default.conf
shop_app/: admin.py  forms.py  models.py  special_variables.py  urls.py  utils.py  views.py
(+97 files in other folders)
