[tool.poetry]
name = "my-shop"
version = "1"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "my_shop"}]

[tool.poetry.dependencies]
python = "^3.10"
asgiref = "3.5.2"
asttokens = "2.0.8"
backcall = "0.2.0"
bash = "0.6"
certifi = "2022.9.24"
charset-normalizer = "2.1.1"
colorama = "0.4.5"
decorator = "5.1.1"
django = "4.1.1"
django-cors-headers = "3.13.0"
django-debug-toolbar = "3.7.0"
django-extensions = "3.2.1"
django-filter = "22.1"
django-middleware-global-request = "0.3.1"
django-phonenumber-field = "7.0.0"
docopt = "0.6.2"
executing = "1.1.0"
gunicorn = "20.0.4"
idna = "3.4"
ipython = "8.5.0"
jedi = "0.18.1"
matplotlib-inline = "0.1.6"
parso = "0.8.3"
phonenumberslite = "8.12.56"
pickleshare = "0.7.5"
pillow = "9.2.0"
pipreqs = "0.4.11"
prompt-toolkit = "3.0.31"
psycopg2-binary = "2.9.3"
pure-eval = "0.2.2"
pygments = "2.13.0"
requests = "2.28.1"
six = "1.16.0"
sqlparse = "0.4.3"
stack-data = "0.5.1"
traitlets = "5.4.0"
tzdata = "2022.4"
urllib3 = "1.26.12"
wcwidth = "0.2.5"
yarg = "0.1.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
